# Map-Bot

./: .breakpoints  .replit  Procfile  TEM3.json  class_playground.py  decorators.py  discord_test.py  image.py  main.py  pyproject.toml  r_test.py  requirements.txt
archived/: discord_main.py
core/: decorators.py  files.py  main.py  roles.py
games/: game directory.json
templates/: archived 1.json  experimental 1.json  experimental 2.json  game_info.json
