[tool.poetry]
name = "repl_python3_TEM-20"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiocron = "^1.6"
discord = "^1.7.3"
rejson = "^0.5.4"
pil-compat = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
